--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "Chess",
-    "slug": "chess",
+    "name": "X&O",
+    "slug": "x-and-o",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/favicon.png",
+    "icon": "./assets/favicon.ico",
     "scheme": "myapp",
     "splash": {
-      "image": "./assets/images/favicon.png",
+      "image": "./assets/favicon.ico",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,27 +19,29 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/favicon.png",
+        "foregroundImage": "./assets/favicon.ico",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.feras123.testlatest"
+      "package": "com.feras123.xando",
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.CAMERA"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/favicon.ico"
     },
     "plugins": [
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/favicon.png",
+          "icon": "./assets/favicon.ico",
           "color": "#0000ff",
           "defaultChannel": "default",
-          "sounds": [
-            "./assets/sound.mp3",
-            "./assets/sound.mp3"
-          ],
           "enableBackgroundRemoteNotifications": false
         }
       ],
@@ -83,7 +85,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/favicon.png",
+          "image": "./assets/favicon.ico",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
@@ -100,14 +102,15 @@
         "origin": false
       },
       "eas": {
-        "projectId": "b1a0aff2-174b-40ef-ab38-b5733680629e"
+        "projectId": "c6476e84-6c3e-4232-a35d-5c24ba035cc2"
       }
     },
     "runtimeVersion": {
       "policy": "appVersion"
-    }, 
+    },
     "updates": {
-      "url": "https://u.expo.dev/b1a0aff2-174b-40ef-ab38-b5733680629e"
-    }
+      "url": "https://u.expo.dev/c6476e84-6c3e-4232-a35d-5c24ba035cc2"
+    },
+    "owner": "feras123"
   }
 }
